Добавлены шаблоный шрифтов

--- a/src/assets/styles/m-colors.sass
+++ b/src/assets/styles/m-colors.sass
@@ -31,5 +31,5 @@ $dropdown-active-border: rgba(8, 128, 174, 1)
 $dropdown-menu-backround: rgba(255, 255, 255, 1)
 $dropdown-menu-border: rgba(219, 226, 234, 1)
 $dropdown-menu-shadow: rgba(44, 39, 56, 0.04)
-$dropdown-menu-text: rgba(117, 111, 134, 1)
+$dropdown-menu-item-text: rgba(117, 111, 134, 1)
 $dropdon-menu-item-hover: rgba(235, 244, 248, 1)
