--- a/src/assets/styles/m-colors.sass
+++ b/src/assets/styles/m-colors.sass
@@ -1,6 +1,7 @@
 $text-heading: rgba(44, 39, 56, 1)
 $text-main: rgba(117, 111, 134, 1)
 $text-link: rgba(8, 128, 174, 1)
+$text-error: rgba(255, 113, 113, 1)
 
 $button-background: rgba(8, 128, 174, 1)
 $button-shadow: rgba(44, 39, 56, 0.08)
