--- a/src/assets/styles/m-fonts.sass
+++ b/src/assets/styles/m-fonts.sass
@@ -59,3 +59,11 @@
   font-size: 16px
   line-height: 21px
   color: m-colors.$button-text
+
+%font-error
+  font-family: "IBM Plex Sans"
+  font-style: normal
+  font-weight: normal
+  font-size: 14px
+  line-height: 18px
+  color: m-colors.$text-error
