Сделан визуал формы

--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -1,2 +1,11 @@
 @use 'fonts'
 @use './m-fonts'
+@use './registrationForm'
+
+.container
+  min-width: 360px
+  max-width: 460px
+  margin: 0 auto
+
+.__visible
+  opacity: 1
