--- a/src/assets/styles/registrationForm.sass
+++ b/src/assets/styles/registrationForm.sass
@@ -21,6 +21,7 @@
     display: block
     padding: 0
     margin: 0 0 8px 0
+    position: relative
   &_title
     display: block
     padding: 0
@@ -36,7 +37,7 @@
     box-sizing: border-box
     box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04)
     @extend %font-input
-    margin: 0 0 8px 0
+    margin: 0
     &:focus
       padding: 15px 
       border: 2px solid m-colors.$input-focus-border
@@ -48,10 +49,11 @@
     padding: 0
     @extend %font-error
     opacity: 0
-    margin: 0
+    margin: 8px 0 0 0
   &_checkbox-label
     display: flex
     align-items: center
+    flex-wrap: wrap
     margin: 36px 0 38px 0
   &_checkbox
     opacity: 0
@@ -128,11 +130,15 @@
       right: 10px
   &_list
     display: block
+    width: 100%
+    padding: 12px 0
     border: 1px solid m-colors.$dropdown-menu-border
     box-sizing: border-box
     box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04), 0px 20px 20px rgba(44, 39, 56, 0.04)
     border-radius: 6px
+    background: m-colors.$dropdown-menu-backround
     margin: 4px 0 0 0
+    position: absolute
   &_item
     display: block
     width: 100%
@@ -142,7 +148,7 @@
     box-sizing: border-box
     @extend %font-dropdown-item
     text-align: left
-    background: m-colors.$dropdown-menu-backround
+    background: none
     &:hover,
     &:focus
       background: m-colors.$dropdon-menu-item-hover
