--- a/src/assets/styles/m-fonts.sass
+++ b/src/assets/styles/m-fonts.sass
@@ -21,7 +21,7 @@
   text-decoration: none
 
 %font-main
-  ont-family: "IBM Plex Sans"
+  font-family: "IBM Plex Sans"
   font-style: normal
   font-weight: 500
   font-size: 16px
