--- a/src/assets/styles/registrationForm.sass
+++ b/src/assets/styles/registrationForm.sass
@@ -33,6 +33,7 @@
     height: 52px
     padding: 16px
     border: 1px solid m-colors.$input-border
+    outline: none
     border-radius: 6px
     box-sizing: border-box
     box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04)
@@ -44,6 +45,10 @@
       color: m-colors.$input-focus-text
     &__filled
       color: m-colors.$input-focus-text
+  &_input::-webkit-input-placeholder
+    color: m-colors.$input-text
+  &_input::-moz-placeholder
+    color: m-colors.$input-text
   &_error
     display: block
     padding: 0
@@ -72,6 +77,7 @@
     height: 56px
     padding: 18px 121px
     border: 2px solid transparent
+    outline: none
     box-sizing: border-box
     box-shadow: 0px 2px 4px rgba(44, 39, 56, 0.08), 0px 4px 8px rgba(44, 39, 56, 0.08)
     border-radius: 6px
