Исправлен текст рядом с чекбоксом

--- a/src/assets/styles/registrationForm.sass
+++ b/src/assets/styles/registrationForm.sass
@@ -71,6 +71,8 @@
         content: url("~img/check.svg")
     &:focus + .pseudo-checkbox
       border: 2px solid m-colors.$checkbox-checked-border
+  &_checkbox-title
+    @extend %font-main
   &_submit-button
     display: flex
     justify-content: center
